Fixed vertical responsivness on mobile phones

--- a/style.css
+++ b/style.css
@@ -167,15 +167,18 @@ body {
 @media (max-width: 1250px) {
   
   body{
-      margin: 0;
+      margin-top: auto;
+      height: auto;
   }
       #container {
     flex-direction: column;
     width: 80%;
+    padding: 0;
   }
 
   .card{
       width: 80%;
+      padding: 0;
   }
 
   
